fix css & missing whitespace

--- a/src/Components/Map/UtopiaMap.css
+++ b/src/Components/Map/UtopiaMap.css
@@ -54,7 +54,7 @@
     position: relative;
     top: -33px;
     left: 10px;
-    width: 13px;
+    width: 13px !important;
   }
 
   .fire-icon {
